--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="try_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
     <string name="update">Обновить</string>
     <string name="not_found">Ничего не нашлось</string>
+    <string name="clear_history">Очистить историю</string>
+    <string name="you_were_looking_for">Вы искали</string>
 </resources>
