--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="not_found">Ничего не нашлось</string>
     <string name="clear_history">Очистить историю</string>
     <string name="you_were_looking_for">Вы искали</string>
+    <string name="duration">Длительность</string>
+    <string name="albom">Альбом</string>
+    <string name="year">Год</string>
+    <string name="genre">Жанр</string>
+    <string name="country">Страна</string>
 </resources>
